# ImmersingLinker

./: AGENTS.md  Directory.Build.props  ImmersingLinker.sln  LICENSE  README.md
ImmersingLinker.CLI/: ImmersingLinker.CLI.fsproj  Program.fs
ImmersingLinker.Core/: ImmersingLinker.Core.csproj
ImmersingLinker.ExtensionSDK/: ImmersingLinker.ExtensionSDK.csproj
ImmersingLinker.SDK/: AppServiceClient.cs  AutomationServiceClient.cs  ClassServiceClient.cs  ImmersingLinker.SDK.csproj  JsonConverters.cs  LessonServiceClient.cs
ImmersingLinker.Server/: ApiModuleManager.cs  ImmersingLinker.Server.csproj  ImmersingLinker.Server.http  Program.cs  WeatherForecast.cs
ImmersingLinker.Services/: ImmersingLinker.Services.csproj
ImmersingLinker.Test/: ImmersingLinker.Test.csproj
ImmersingLinker.UI/: App.axaml  App.axaml.cs  ImmersingLinker.UI.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
immersinglinker-desktop/: package.json
immersinglinker-sdk-node/: .gitignore  package.json  pnpm-lock.yaml  (+1 more)
immersinglinker-sdk-py/: .gitignore  README.md  main.py  pyproject.toml
immersinglinker-sdk-py/immersinglinker/: __init__.py  enums.py  types.py
immersinglinker-sdk-py/immersinglinker/clients/: __init__.py  app.py  automation.py  base.py  class_service.py  lesson.py
immersinglinker-sdk-py/immersinglinker_sdk_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
immersinglinker-sdk-py/tests/: conftest.py  test_app.py  test_automation.py  test_base.py  test_class_service.py  test_enums.py  test_lesson.py  test_types.py
(+129 files in other folders)
