[project]
name = "immersinglinker-sdk-py"
version = "0.1.0"
description = "ImmersingLinker Python SDK - type definitions and client library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.9"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["immersinglinker"]
