[project]
name = "immersinglinker-sdk-py"
version = "0.1.0"
description = "ImmersingLinker Python SDK - type definitions and client library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "aioresponses>=0.7"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["immersinglinker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
